--- a/Text_pre_processing.ipynb
+++ b/Text_pre_processing.ipynb
@@ -876,7 +876,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_file = open(\"30035678_vocab.txt\", 'w')\n",
+    "out_file = open(\"vocab.txt\", 'w')\n",
     "for i in range(0,len(final_vocab)):\n",
     "    if i != (len(final_vocab)-1):\n",
     "        out_file.write(\"{}:{} \".format(final_vocab[i],final_vocab.index(final_vocab[i])))\n",
@@ -892,7 +892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_file = open(\"30035678_countVec.txt\", 'w')\n",
+    "out_file = open(\"countVec.txt\", 'w')\n",
     "for k,v in stem_units.items():\n",
     "    if v != []:\n",
     "        out_file.write(\"{},\".format(k))\n",
