--- a/Text_pre_processing.ipynb
+++ b/Text_pre_processing.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"30035678.txt\") as file:\n",
+    "with open(\"units_data.txt\") as file:\n",
     "\n",
     "    lines = []\n",
     "    lines = file.readlines()\n",
