--- a/Text_pre_processing.ipynb
+++ b/Text_pre_processing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FIT5196 Assessment 1 - Task 2: Text Pre-Processing\n",
+    "# Python Implementation of Text Pre-Processing\n",
     "#### Author Name: Pouria Ebrahimnezhad\n",
     "\n",
     "\n",
